--- a/index.html
+++ b/index.html
@@ -180,92 +180,9 @@
             <div class="arrow arrow-right" id="arrowRight_2"><i class="fa-solid fa-chevron-right"></i></div> -->
 
         </div>
-        <!--QUINTA PANTALLA-->
-        <div class="screen five_screen" id="five_screen">
-            <div class="thrid_screen_content">
-                <div class="header_funcionamiento">
-
-                    <img src="./img/logo_ladoblanco.png" class="right-image" alt="logo">
-                </div>
-                <div class="content_entrada">
-                    <p class="title_entr">PARA</p>
-                    <p class="title_entr">COMPARTIR</p>
-                </div>
-
-            </div>
-            <!-- <div class="arrow arrow-left" id="arrowLeft2"><i class="fa-solid fa-angle-left"></i></div>
-            <div class="arrow arrow-right" id="arrowRight_3"><i class="fa-solid fa-chevron-right"></i></div> -->
-
-        </div>
-        <!--SEXTA PANTALLA-->
-        <div class="screen six_screen" id="six_screen">
-            <div class="thrid_screen_content">
-                <div class="header_funcionamiento header_back">
-                    <div class="cont_title">
-                        <p class=" text_icon text-color">PARA</p>
-                        <p class=" text_icon">COMPARTIR</p>
-                    </div>
-
-                    <img src="./img/iconoblanco2.png" class="img_logo" alt="logo">
-                </div>
-                <div class="content_entradas">
-
-                    <div class="entradas_c ">
-                        <div class="row">
-                            <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">picada pequeña</p>
-                                <p class="text_menu">300 gr de proteína (chorizo, chicharrón), 2 arepas, 2 patacones,
-                                    papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
-                                </p>
-                            </div>
-                            <div class="price_cont col-2">
-                                <p class="tlt_price">$22K</p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="entradas_c ">
-                        <div class="row">
-                            <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">picada mediana</p>
-                                <p class="text_menu">600 gr de proteína (chorizo, chicharrón, morcilla, costilla), 4
-                                    arepas, 4 patacones, papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
-                                </p>
-                            </div>
-                            <div class="price_cont col-2">
-                                <p class="tlt_price">$50K</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-
-                    <div class="entradas_c ">
-                        <div class="row">
-                            <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">picada grande</p>
-                                <p class="text_menu">1200 gr de proteína (chorizo, chicharrón, morcilla, costilla), 8
-                                    arepas, 8 patacones, papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
-                                </p>
-                            </div>
-                            <div class="price_cont col-2">
-                                <p class="tlt_price">$90K</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-
-
-                </div>
-
-            </div>
-            <!-- <div class="arrow arrow-left" id="arrowLeft2"><i class="fa-solid fa-angle-left"></i></div>
-            <div class="arrow arrow-right" id="arrowRight_2"><i class="fa-solid fa-chevron-right"></i></div> -->
-
-        </div>
+       
         <!--SEPTIMA PANTALLA-->
-        <div class="screen seven_screen" id="seven_screen">
+        <div class="screen five_screen" id="five_screen">
             <div class="thrid_screen_content">
                 <div class="header_funcionamiento">
 
@@ -281,7 +198,7 @@
 
         </div>
         <!--octava PANTALLA-->
-        <div class="screen eigth_screen" id="eigth_screen">
+        <div class="screen six_screen" id="six_screen">
             <div class="thrid_screen_content">
                 <div class="header_funcionamiento header_back">
                     <div class="cont_title">
@@ -379,7 +296,7 @@
         </div>
 
         <!--novena PANTALLA-->
-        <div class="screen nine_screen" id="nine_screen">
+        <div class="screen seven_screen" id="seven_screen">
             <div class="thrid_screen_content">
                 <div class="header_funcionamiento header_back">
                     <div class="cont_title">
@@ -469,6 +386,95 @@
             <div class="arrow arrow-right" id="arrowRight_2"><i class="fa-solid fa-chevron-right"></i></div> -->
 
         </div>
+
+
+
+         <!--QUINTA PANTALLA-->
+         <div class="screen eigth_screen" id="eigth_screen">
+            <div class="thrid_screen_content">
+                <div class="header_funcionamiento">
+
+                    <img src="./img/logo_ladoblanco.png" class="right-image" alt="logo">
+                </div>
+                <div class="content_entrada">
+                    <p class="title_entr">PARA</p>
+                    <p class="title_entr">COMPARTIR</p>
+                </div>
+
+            </div>
+            <!-- <div class="arrow arrow-left" id="arrowLeft2"><i class="fa-solid fa-angle-left"></i></div>
+            <div class="arrow arrow-right" id="arrowRight_3"><i class="fa-solid fa-chevron-right"></i></div> -->
+
+        </div>
+        <!--SEXTA PANTALLA-->
+        <div class="screen nine_screen" id="nine_screen">
+            <div class="thrid_screen_content">
+                <div class="header_funcionamiento header_back">
+                    <div class="cont_title">
+                        <p class=" text_icon text-color">PARA</p>
+                        <p class=" text_icon">COMPARTIR</p>
+                    </div>
+
+                    <img src="./img/iconoblanco2.png" class="img_logo" alt="logo">
+                </div>
+                <div class="content_entradas">
+
+                    <div class="entradas_c ">
+                        <div class="row">
+                            <div class="conten-header-entradas col-10">
+                                <p class="tlt_menu">picada pequeña</p>
+                                <p class="text_menu">300 gr de proteína (chorizo, chicharrón), 2 arepas, 2 patacones,
+                                    papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
+                                </p>
+                            </div>
+                            <div class="price_cont col-2">
+                                <p class="tlt_price">$22K</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="entradas_c ">
+                        <div class="row">
+                            <div class="conten-header-entradas col-10">
+                                <p class="tlt_menu">picada mediana</p>
+                                <p class="text_menu">600 gr de proteína (chorizo, chicharrón, morcilla, costilla), 4
+                                    arepas, 4 patacones, papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
+                                </p>
+                            </div>
+                            <div class="price_cont col-2">
+                                <p class="tlt_price">$50K</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    <div class="entradas_c ">
+                        <div class="row">
+                            <div class="conten-header-entradas col-10">
+                                <p class="tlt_menu">picada grande</p>
+                                <p class="text_menu">1200 gr de proteína (chorizo, chicharrón, morcilla, costilla), 8
+                                    arepas, 8 patacones, papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
+                                </p>
+                            </div>
+                            <div class="price_cont col-2">
+                                <p class="tlt_price">$90K</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+
+            </div>
+            <!-- <div class="arrow arrow-left" id="arrowLeft2"><i class="fa-solid fa-angle-left"></i></div>
+            <div class="arrow arrow-right" id="arrowRight_2"><i class="fa-solid fa-chevron-right"></i></div> -->
+
+        </div>
+
+
         <!--decima PANTALLA-->
         <div class="screen ten_screen" id="ten_screen">
             <div class="thrid_screen_content">
@@ -719,10 +725,10 @@
                                 
                             </div>
                             <div class="price_cont col-2">
-                                <p class="tlt_price">$8K</p>
-                                <p class="tlt_price">$11K</p>
-                                <p class="tlt_price">$10K</p>
-                                <p class="tlt_price">$11K</p>
+                                <p class="tlt_price" style="padding-bottom: 15px;">$8K</p>
+                                <p class="tlt_price" style="padding-bottom: 15px;">$11K</p>
+                                <p class="tlt_price" style="padding-bottom: 15px;">$10K</p>
+                                <p class="tlt_price" style="padding-bottom: 15px;">$11K</p>
                             </div>
 
                         </div>
