--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="row">
                             <div class="conten-header-entradas col-10">
                                 <p class="tlt_menu">chorizo</p>
-                                <p class="text_menu">Chorizo tipo santarrosano, arepas o patacones acompañado de hogao y
+                                <p class="text_menu">Chorizo tipo santarrosano y arepas acompañado de hogao y
                                     guacamole de la casa.</p>
                             </div>
                             <div class="price_cont col-2">
@@ -160,8 +160,8 @@
                     <div class="entradas_c ">
                         <div class="row">
                             <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">trio de arepas</p>
-                                <p class="text_menu">3 arepitas rellenas de morcilla, chorizo y chicharrón acompañado de
+                                <p class="tlt_menu">trio de canastas de patacón</p>
+                                <p class="text_menu">3 canastas de patacón rellenas de morcilla, chorizo y chicharrón acompañado de
                                     hogao y guacamole de la casa.
                                 </p>
                             </div>
@@ -350,20 +350,7 @@
 
 
                     </div>
-                    <div class="entradas_c ">
-                        <div class="row">
-                            <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">salmón</p>
-                                <p class="text_menu">300 gr de salmón, bañado en salsa de limón acompañado de pure de
-                                    papa y espárragos.</p>
-                            </div>
-                            <div class="price_cont col-2">
-                                <p class="tlt_price">$70K</p>
-                            </div>
-                        </div>
-
-
-                    </div>
+                    
                     <div class="entradas_c ">
                         <div class="row">
                             <div class="conten-header-entradas col-10">
@@ -645,11 +632,13 @@
                     <div class="entradas_c ">
                         <div class="row">
                             <div class="conten-header-entradas col-10">
-                                <p class="text_menu">UVA - JENGIBRE</p>
                                 <p class="text_menu" style="color: #c19d68;">FRUTOS ROJOS</p>
-                                <p class="text_menu">PERA - FRESA - DURAZNO - ALBACAE</p>
+                                <p class="text_menu" style="color: #c19d68;">FRUTOS AMARILLOS</p>
+                                <p class="text_menu">PERA - FRESA - DURAZNO - ALBACA</p>
                                 <p class="text_menu" style="color: #c19d68;">SANDIA - ALBACA</p>
                                 <p class="text_menu">TAMARINDO</p>
+                                <p class="text_menu">DURAZNO</p>
+                                <p class="text_menu">MANDARINA</p>
                             </div>
                             <div class="price_cont col-2">
                                 <p class="tlt_price">$11K</p>
@@ -716,12 +705,10 @@
                             <div class="conten-header-entradas col-10">
                                 <p class="tlt_menu">MICHELADA NACIONAL</p>
                                 <p class="text_menu">cerveza aguila o pilsen</p>
-                                <p class="tlt_menu">MICHELADA Coronita</p>
-                                <p class="text_menu">cerveza coronita</p>
                                 <p class="tlt_menu">MICHELADA SABORIZADA</p>
                                 <p class="text_menu">cerveza red's con frutos rojos</p>
                                 <p class="tlt_menu">MICHELADA DE SODA</p>
-                                <p class="text_menu">soda y cerezas</p>
+                                <p class="text_menu">soda michelada</p>
                                 
                             </div>
                             <div class="price_cont col-2">
