--- a/index.html
+++ b/index.html
@@ -633,12 +633,12 @@
                         <div class="row">
                             <div class="conten-header-entradas col-10">
                                 <p class="text_menu" style="color: #c19d68;">FRUTOS ROJOS</p>
-                                <p class="text_menu" style="color: #c19d68;">FRUTOS AMARILLOS</p>
-                                <p class="text_menu">PERA - FRESA - DURAZNO - ALBACA</p>
-                                <p class="text_menu" style="color: #c19d68;">SANDIA - ALBACA</p>
-                                <p class="text_menu">TAMARINDO</p>
+                                <p class="text_menu" >FRUTOS AMARILLOS</p>
+                                <p class="text_menu" style="color: #c19d68;">PERA - FRESA - DURAZNO - ALBACA</p>
+                                <p class="text_menu" >SANDIA - ALBACA</p>
+                                <p class="text_menu" style="color: #c19d68;">TAMARINDO</p>
                                 <p class="text_menu">DURAZNO</p>
-                                <p class="text_menu">MANDARINA</p>
+                                <p class="text_menu" style="color: #c19d68;">MANDARINA</p>
                             </div>
                             <div class="price_cont col-2">
                                 <p class="tlt_price">$11K</p>
