--- a/index.html
+++ b/index.html
@@ -755,8 +755,8 @@
 
                                 <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA BRISA MANZANA</p>
                                 <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA BRISA MARACUYA</p>
-                                <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA BRISA</p>
-                                <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA BRISA CON GAS</p>
+                                <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA MANANTIAL</p>
+                                <p class="text_menu" style="  font-size: 0.8rem; text-transform: uppercase;">AGUA MANANTIAL CON GAS</p>
                             </div>
                             <div class="price_cont col-2">
                                 <p class="tlt_price">$4.5K</p>
@@ -767,8 +767,8 @@
                                 <p class="tlt_price">$2K</p>
                                 <p class="tlt_price">$3.5K</p>
                                 <p class="tlt_price">$3.5K</p>
-                                <p class="tlt_price">$2.5K</p>
-                                <p class="tlt_price">$3K</p>
+                                <p class="tlt_price">$5K</p>
+                                <p class="tlt_price">$6K</p>
                             </div>
                         </div>
 
