--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <img src="./img/logo_ladoblanco.png" class="right-image" alt="logo">
                 </div>
                 <div class="content_entrada">
-                    <p class="title_entr" style="font-size: 4.3rem;">DESAYUNOS Y</p>
-                    <p class="title_entr" style="font-size: 4.3rem>TENTACIONES</p>
+                    <p class="title_entr" style="font-size: 4rem;">DESAYUNOS Y</p>
+                    <p class="title_entr" style="font-size: 4rem;">TENTACIONES</p>
                 </div>
 
             </div>
