--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="entradas_c ">
                         <div class="row">
                             <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">Desayuno tradicionel</p>
+                                <p class="tlt_menu">Desayuno tradicional</p>
                                 <p class="text_menu">arepa con queso y proteína a elección (res, cerdo, chicharrón, chorizo) arepa con queso y chocolate o café</p>
                             </div>
                             <div class="price_cont col-2">
@@ -552,7 +552,7 @@
                     <div class="entradas_c ">
                         <div class="row">
                             <div class="conten-header-entradas col-10">
-                                <p class="tlt_menu">picada pequeña</p>
+                                <p class="tlt_menu">Picada personal</p>
                                 <p class="text_menu">300 gr de proteína (chorizo, chicharrón), 2 arepas, 2 patacones,
                                     papa criolla, acompañado de guacamole, BBQ de la casa y hogao.
                                 </p>
