--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
                         <div class="row">
                             <div class="conten-header-entradas col-10">
                                 <p class="tlt_menu">alitas</p>
-                                <p class="text_menu">10 alitas con papas a la francesa (salsas: BBQ, BBQ Picante, miel mostaza, miel mostaza maracuyá)</p>
+                                <p class="text_menu">6 alitas con papas a la francesa (salsas: BBQ, BBQ Picante, miel mostaza)</p>
                             </div>
                             <div class="price_cont col-2">
-                                <p class="tlt_price">$28K</p>
+                                <p class="tlt_price">$20K</p>
                             </div>
                         </div>
 
